# claude-agentic-software-builder

./: GENERATION_PROMPT.md  README.md
agentic-builder/: .env.example  .gitignore  README.md  pyproject.toml
agentic-builder/prompts/agents/: architect.md  code-quality-reviewer.md  developer.md  devops-engineer.md  e2e-tester.md  graphical-designer.md  product-manager.md  quality-engineer.md  researcher.md  security-reviewer.md  task-quality-reviewer.md  team-lead.md  uiux-specialist.md
agentic-builder/src/agentic_builder/: __init__.py  __main__.py
agentic-builder/src/agentic_builder/agents/: __init__.py  executor.py  prompt_loader.py  registry.py  response_parser.py
agentic-builder/src/agentic_builder/api/: __init__.py  claude_cli.py
agentic-builder/src/agentic_builder/cli/: __init__.py  main.py  output.py
agentic-builder/src/agentic_builder/cli/commands/: __init__.py  agents.py  cancel.py  init_cmd.py  (+6 more)
agentic-builder/src/agentic_builder/context/: __init__.py  budget.py  serializer.py  windowing.py
agentic-builder/src/agentic_builder/core/: __init__.py  config.py  constants.py  exceptions.py
agentic-builder/src/agentic_builder/orchestration/: __init__.py  engine.py  model_selector.py  stage_executor.py  workflows.py
agentic-builder/src/agentic_builder/storage/: __init__.py  database.py  schema.py  tasks.py  workflows.py
agentic-builder/tests/: __init__.py  conftest.py  test_budget.py  test_cli_main.py  test_config.py  test_constants.py  test_database.py  test_prompt_loader.py  test_registry.py  test_response_parser.py  test_tasks.py  test_workflows.py
(+1 files in other folders)
